--- a/se-project/templates/layout.html
+++ b/se-project/templates/layout.html
@@ -9,41 +9,43 @@
     {% endif %}
 </head>
 <body>
-        <nav class="navbar navbar-inverse">
-                <div class="container">
-                  <!-- Brand and toggle get grouped for better mobile display -->
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar bg-danger" ></span>
-                      <span class="icon-bar bg-danger"></span>
-                      <span class="icon-bar bg-danger"></span>
+        <div class="bapat">
+        
+                <nav class="navbar navbar-transparent">
+                        <div class="container">
+                          <!-- Brand and toggle get grouped for better mobile display -->
+                          <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                              <span class="sr-only">Toggle navigation</span>
+                              <span class="icon-bar bg-danger" ></span>
+                              <span class="icon-bar bg-danger"></span>
+                              <span class="icon-bar bg-danger"></span>
+                              
+                            </button>
+                            <a class="navbar-brand" href="#">Arctic Warfare</a>
+                          </div>
                       
-                    </button>
-                    <a class="navbar-brand" href="Assignment 8.html">Arctic Warfare</a>
-                  </div>
-              
-                  <!-- Collect the nav links, forms, and other content for toggling -->
-                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                      <li class="active"><a href="Assignment 8.html">Home <span class="sr-only">(current)</span></a></li>
-                      <li><a href="#">About</a></li>
-                     
-                      <li><a href="#">Contact</a></li>
-                    </ul>
-           
-                    <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#">Sign Up</a></li>
-                      <li><a href="Login .html">Login </a></li>
-                    
-                    </ul>
-                  </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-                <script
-src="https://code.jquery.com/jquery-3.4.1.min.js"
-integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-crossorigin="anonymous"></script>
-              </nav>
+                          <!-- Collect the nav links, forms, and other content for toggling -->
+                          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                              <li class="active"><a href="Assignment 8.html">Home <span class="sr-only">(current)</span></a></li>
+                              <li><a href="#">About</a></li>
+                             
+                              <li><a href="#">Contact</a></li>
+                            </ul>
+                   
+                            <ul class="nav navbar-nav navbar-right">
+                              <li><a href="#">Sign Up</a></li>
+                              <li><a href="Login .html">Login </a></li>
+                            
+                            </ul>
+                          </div><!-- /.navbar-collapse -->
+                        </div><!-- /.container-fluid -->
+                        <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+                      </nav>
     {% block content %}{% endblock %}
     <!-- HEllo By ojha -->
 </body>
