--- a/se-project/templates/layout.html
+++ b/se-project/templates/layout.html
@@ -11,49 +11,11 @@
 </head>
 <body>
     <div class="container">
-            <nav class="navbar navbar-inverse">
-                    <div class="container">
-                      <!-- Brand and toggle get grouped for better mobile display -->
-                      <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                          <span class="sr-only">Toggle navigation</span>
-                          <span class="icon-bar bg-danger" ></span>
-                          <span class="icon-bar bg-danger"></span>
-                          <span class="icon-bar bg-danger"></span>
-                          
-                        </button>
-                        <a class="navbar-brand" href="Assignment 8.html">Arctic Warfare</a>
-                      </div>
-                  
-                      <!-- Collect the nav links, forms, and other content for toggling -->
-                      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                          <li class="active"><a href="Assignment 8.html">Home <span class="sr-only">(current)</span></a></li>
-                          <li><a href="#">About</a></li>
-                         
-                          <li><a href="#">Contact</a></li>
-                        </ul>
-               
-                        <ul class="nav navbar-nav navbar-right">
-                          <li><a href="#">Sign Up</a></li>
-                          <li><a href="Login .html">Login </a></li>
-                        
-                        </ul>
-                      </div><!-- /.navbar-collapse -->
-                    </div><!-- /.container-fluid -->
-                    <script
-src="https://code.jquery.com/jquery-3.4.1.min.js"
-integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-crossorigin="anonymous"></script>
-                  </nav>
-
         {% block content %}{% endblock %}
     </div>
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script> -->
-                      <!-- </nav> -->
-
-    <!-- HEllo By ojha -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
 </body>
 </html>
